# mini-pipeline

./: README.md  app_config.yaml  pyproject.toml
docker/: docker-compose.yaml
migrations/sql/: V1__create_pipeline_templates.sql
src/mini_pipeline/: main.py
src/mini_pipeline/api/: app.py  schemas.py
src/mini_pipeline/common/: config.py  conversion.py  file.py  logging.py  s3.py  test_types.py  types.py
src/mini_pipeline/core/: pipeline_execution.py  template_types.py  test_types.py  types.py
src/mini_pipeline/db/: tables.py  utils.py
src/mini_pipeline/domain/core/: template_types.py  test_types.py  types.py
src/mini_pipeline/pipeline_executor/: spark_executor.py  test_spark_executor.py
src/mini_pipeline/service/executor/: pipeline_execution.py  test_pipeline_execution.py
src/mini_pipeline/service/pipeline_executor/: spark_executor.py  test_spark_executor.py
test_data/: dataset.csv  execute_request.json  template_creation_request.json
tests/: test_types.py
tests/core/: test_pipeline_execution.py  test_types.py
