[project]
name = "mini-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyspark (==4.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
]

[tool.poetry]
packages = [{include = "mini_pipeline", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
